download of final zip implemented

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -71,4 +71,24 @@
       </div>
     </div>
   </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="zipWindow">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Everyone is done</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>All participants have now fill in the payment-survey, here is a zip-file container all experiment data</p>
+        </div>
+        <div class="modal-footer">
+          <a type="button" class="btn btn-primary" id="downloadZip"><i class="fa fa-download"></i> Download</a>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
