download zip button added

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -23,6 +23,14 @@
             <button class="btn btn-secondary" id="buttonDownloadPay"><i class="fa fa-download"></i> CSV file</button>
           </div>
         </div>
+
+        <div class="card admincards">
+          <div class="card-body">
+            <h5 class="card-title">Download ZIP</h5>
+            <p class="card-text">Collects all data as CSV in a zip-file. This is a backup, when all participants are done a window will automatically pop up.</p>
+            <button class="btn btn-secondary" id="buttonDownloadZip"><i class="fa fa-download"></i> ZIP file</button>
+          </div>
+        </div>
       </div>
     </div>
 
