--- a/src/stages/lobby/client/client.html
+++ b/src/stages/lobby/client/client.html
@@ -1,5 +1,8 @@
 <div class="bg">
   <div class="row">
+    Mars Colonies - an interactive exploration of the human experience during crises
+  </div>
+  <div class="row">
     <div class="col-md-1"></div>
     <div class="card col-md-10">
       <div class="card-header">
@@ -40,7 +43,7 @@
     <div class="col-md-1"></div>
     <div class="card col-md-10">
       <div class="card-header">
-        <h5>Players</h5>
+        <h5>Test subjects</h5>
       </div>
       <div class="card-body">
         <div class="row">
@@ -77,12 +80,17 @@
           <div class="col-md-6">
             <div class="row">
               <div class="btn-group btn-group-toggle mx-auto" data-toggle="buttons">
-                <label class="btn btn-secondary active btn-lg">
-                  <input type="radio" name="options" id="option1" autocomplete="off" checked> Not Ready
+                <label class="btn btn-secondary active btn-lg" disabled>
+                  <input type="radio" name="options" id="option1" autocomplete="off" checked disabled> Not Ready
                 </label>
-                <label class="btn btn-secondary btn-lg">
-                  <input type="radio" name="options" id="option2" autocomplete="off"> Ready
+                <label class="btn btn-secondary btn-lg" disabled>
+                  <input type="radio" name="options" id="option2" autocomplete="off" disabled> Ready
                 </label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="checkbox">
+                <label><input type="checkbox" id="buttonEnable"> accept that anonymous participant-data collected during the game will be used for science</label>
               </div>
             </div>
           </div>
