survey can restart the server when everyone is done

--- a/src/admin/admin-client.html
+++ b/src/admin/admin-client.html
@@ -49,6 +49,7 @@
             <button class="btn btn-success" id="buttonStart" disabled>Start</button>
             <button class="btn btn-warning" id="buttonEnd" disabled>End Game</button>
             <button class="btn btn-danger" id="buttonNext" disabled>Next Stage</button>
+            <button class="btn btn-danger" id="buttonReset" disabled>Reset</button>
           </p>
           <div class="checkbox">
             <label><input type="checkbox" id="buttonEnable"> Enable controls</label>
