--- a/src/stages/survey/client/client.html
+++ b/src/stages/survey/client/client.html
@@ -4,7 +4,8 @@
     <div class="col-lg-8">
       <div class="jumbotron " id="survey">
         <div class="row"><h1 id="surveyTitle"></h1></div>
-        <div class="row">Please wait...</div>
+        <div class="row">If the survey does not start automatically, click the button below</div>
+        <div class="row"><button id="startSurvey" type="button" class="btn btn-default">Start Survey</button></div>
       </div>
     </div>
   </div>
