--- a/src/stages/game/client/clientDA.html
+++ b/src/stages/game/client/clientDA.html
@@ -156,7 +156,9 @@
             </div>
           </div>
         </div>
-        <div id="production-progress">no production</div>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" id="production-progress"></div>
+        </div>
       </div>
 
       <div class="col-md-12 windowbg" id="inventory-view">
