translated to danish

--- a/src/stages/lobby/client/clientDA.html
+++ b/src/stages/lobby/client/clientDA.html
@@ -1,12 +1,9 @@
 <div class="bg">
   <div class="row">
-    Mars Colonies - an interactive exploration of the human experience during crises
-  </div>
-  <div class="row">
     <div class="col-md-1"></div>
     <div class="card col-md-10">
       <div class="card-header">
-        <h5>Interface</h5>
+        <h5>Brugerflade</h5>
       </div>
       <div class="card-body">
         <div class="row">
@@ -43,7 +40,7 @@
     <div class="col-md-1"></div>
     <div class="card col-md-10">
       <div class="card-header">
-        <h5>Test subjects</h5>
+        <h5>Deltagere</h5>
       </div>
       <div class="card-body">
         <div class="row">
@@ -61,15 +58,15 @@
                   <tbody id="playerStatus">
                     <tr>
                       <td class="text-left">playerid</td>
-                      <td>not ready</td>
+                      <td>ikke klar</td>
                     </tr>
                     <tr>
                       <td class="text-left">playerid</td>
-                      <td class="bg-success">ready</td>
+                      <td class="bg-success">klar</td>
                     </tr>
                     <tr>
                       <td class="text-left">playerid</td>
-                      <td class="bg-success">ready</td>
+                      <td class="bg-success">klar</td>
                     </tr>
                   </tbody>
                 </table>
@@ -79,14 +76,14 @@
 
           <div class="col-md-6">
             <div class="row">
-              When ready, click accept and toogle the ready-button beneath.
+              Når du er klar, marker aksepter og klik på klar knappen.
             </div>
             <div class="row">
-              <button type="button" class="btn btn-secondary btn-large" id="buttonReady" disabled>Ready</button>
+              <button type="button" class="btn btn-secondary btn-large" id="buttonReady" disabled>Klar</button>
             </div>
             <div class="row">
               <div class="checkbox">
-                <label><input type="checkbox" id="buttonEnable"> accept that anonymous participant-data collected during the game will be used for science</label>
+                <label><input type="checkbox" id="buttonEnable"> aksepter at anonym data opsamlet under spillet vil blive brugt til videnskab</label>
               </div>
             </div>
           </div>
