--- a/src/stages/survey/client/thanks.html
+++ b/src/stages/survey/client/thanks.html
@@ -1,7 +1,7 @@
 <div class="row">
-  <h1>Please wait for the other players...</h1>
+  <h1>Venter på andre spillere...</h1>
 </div>
 <div class="row">
-  Thank you very much for filling in our survey! Now we are preparing you for the next stage!
+  Tak for at udfylde spørgeskemaet, afventer andre spillere.
 </div>
 <div class="row" id="countdownSurvey"></div>
