--- a/src/stages/game/client/clientDA.html
+++ b/src/stages/game/client/clientDA.html
@@ -11,7 +11,7 @@
         </div>
         <div class="modal-body">
           <p id="gameoverScore"></p>
-          <p>Går til næste side om <b id="gameoverCountdown"></b> seconder</p>
+          <p>Går til næste side om <b id="gameoverCountdown"></b> sekunder</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Luk</button>
@@ -187,7 +187,7 @@
         <div class="progress bg-dark" style="width: 100%;">
           <div class="progress-bar" id="time-left-bar" role="progressbar" style="width: 0%; margin: 0px;"></div>
         </div>
-        <div class="text-right" id="time-left"><span id="time-left-text">0</span> seconder tilbage</div>
+        <div class="text-right" id="time-left"><span id="time-left-text">0</span> sekunder tilbage</div>
       </div>
     </div>
   </div>
