timing issue and a few spellingmistakes

--- a/src/stages/lobby/client/clientDA.html
+++ b/src/stages/lobby/client/clientDA.html
@@ -9,10 +9,10 @@
         <div class="row">
           <div class="col-xl-6">
             <p>
-              I er astronauter, der har valgt at bo på Mars for altid. I bor i flere små kolonier. Der kommer ikke vand, luft og mad fra Jorden, så det er i nødt til at producere selv.
+              I er astronauter, der har valgt at bo på Mars for altid. I bor i flere små kolonier. Der kommer ikke vand, luft og mad fra Jorden, så det er I nødt til at producere selv.
             </p>
             <p>
-              I hver koloni har i en portion af vand, luft og mad, men i kan bytte mellem kolonierne. Hver koloni har specialiseret sig i én af de livsnødvendige kilder: Vand, luft og mad, men hver gang du producerer, mister du noget af én af dine andre ressourcer. For at overleve skal i bytte med hinanden.
+              I hver koloni har I en portion af vand, luft og mad, men I kan bytte mellem kolonierne. Hver koloni har specialiseret sig i én af de livsnødvendige kilder: Vand, luft og mad, men hver gang du producerer, mister du noget af én af dine andre ressourcer. For at overleve skal I bytte med hinanden.
             </p>
             <picture>
               <img src="./../../../../assets/overviewLetters.png" class="img-fluid rounded" alt="Overview">
@@ -108,7 +108,7 @@
         <p><span id="coundownLabel"></span> ms</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Luk</button>
       </div>
     </div>
   </div>
