--- a/src/stages/game/client/clientDA.html
+++ b/src/stages/game/client/clientDA.html
@@ -11,7 +11,7 @@
         </div>
         <div class="modal-body">
           <p id="gameoverScore"></p>
-          <p>Går til næste side om <b id="gameoverCountdown"></b> sekunder</p>
+          <p>Går til næste spil om <b id="gameoverCountdown"></b> sekunder</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Luk</button>
