--- a/src/stages/lobby/client/clientDA.html
+++ b/src/stages/lobby/client/clientDA.html
@@ -99,7 +99,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Spillet vil starte om </h5>
+        <h5 class="modal-title">Spørgeskemaet vil starte om </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
